--- a/_posts/2022-03-01-1-first-post.md
+++ b/_posts/2022-03-01-1-first-post.md
@@ -8,7 +8,7 @@ date: 2021-03-01
 last_modified_at: 2021-03-01
 ---
 
-> 게임 개발자가 되기 위해 공부하면서 배우는 여러가지 내용들을 기록하기 위한 블로그입니다. 포스팅에 참고한 모든 강의와 자료들은 하단에 "Reference"에 남겨두었습니다.
+> 게임 개발자가 되기 위해 공부하면서 배우는 여러가지 내용들을 기록하기 위한 블로그입니다. 포스팅에 참고한 모든 강의와 자료들은 하단에 "참조"에 남겨두었습니다.
 
 <div style="width:100%;height:0;padding-bottom:45%;position:relative;"><iframe src="https://giphy.com/embed/xT0xezQGU5xCDJuCPe" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/congratulations-congrats-xT0xezQGU5xCDJuCPe"></a></p>
 
