수정 : 컬러 코드 추가

--- a/_posts/2022-03-01-1-first-post.md
+++ b/_posts/2022-03-01-1-first-post.md
@@ -22,6 +22,12 @@ last_modified_at: 2021-03-01
 
 ![클아이언트 로드맵](https://github.com/utilForever/game-developer-roadmap/raw/main/img/client.png)
 
+## 컬러
+
+좋아하는 컬러는 보라색 계열입니다. 
+
+<script src="https://coolors.co/palette-widget/widget.js"></script>
+<script data-id="09221592074444529">new CoolorsPaletteWidget("09221592074444529", ["2d00f7","6a00f4","8900f2","a100f2","b100e8","bc00dd","d100d1","db00b6","e500a4","f20089"]); </script>
 
 ## 참조
 
